--- a/css/login.css
+++ b/css/login.css
@@ -30,15 +30,6 @@
     font-weight: bold;
 }
 
-.user-avatar {
-    width: 64px;
-    height: 64px;
-    border-radius: 50%;
-    margin-bottom: 15px;
-    border: 2px solid #FFFFFF;
-    box-shadow: 1px 1px 3px rgba(0,0,0,0.3);
-}
-
 .user-select {
     display: flex;
     gap: 15px;
@@ -50,11 +41,19 @@
     padding: 8px;
     cursor: pointer;
     border: 1px solid transparent;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: transform 0.2s;
 }
 
 .user-account:hover {
-    background: #000080;
-    color: white;
+    transform: scale(1.05);
+}
+
+.user-account.selected {
+    border: 2px solid #000080;
+    background-color: rgba(0, 128, 255, 0.2);
 }
 
 .user-account img {
@@ -62,6 +61,7 @@
     height: 32px;
     border-radius: 50%;
     margin-bottom: 5px;
+    transition: opacity 0.2s;
 }
 
 .user-account span {
@@ -124,4 +124,5 @@
 #shutdown-btn img {
     width: 16px;
     height: 16px;
-} 
+}
+
